--- a/config.json
+++ b/config.json
@@ -1,44 +1,42 @@
 {
-  "barco": {
-    "network-info": {
-      "ip": "192.168.1.2",
-      "broadcast": "255.255.255.0",
-      "gateway": "192.168.1.1"
+  "Network": {
+    "IP": "192.168.1.2",
+    "SubnetMask": "255.255.255.0",
+    "Gateway": "192.168.1.1"
+  },
+  "Personalisation": {
+    "OnScreenID": {
+      "Language": "fr",
+      "MeetingRoomName": "test-meeting-room",
+      "Location": "France",
+      "WelcomeMessage": "Welcome !",
+      "ShowNetworkInfo": true,
+      "EnableThreaterMode": true
     },
-    "personalisation": {
-      "on-screen-id": {
-        "language": "fr",
-        "meeting-room-name": "test-meeting-room",
-        "location": "France",
-        "welcome-message": "Welcome !",
-        "show-network-info": true,
-        "enable-threater-mode": true
+    "Wallpaper": {
+      "Number": 1
+    }
+  },
+  "WifiNetwork": {
+    "LanSettings": {
+      "LanHostName": {
+        "Hostname": "hostname-test"
       },
-      "wallpaper": {
-        "number": 1
+      "PrimaryInterface": {
+        "Method": "automatic",
+        "PrimaryInterfaceIP": "0.0.0.0",
+        "PrimaryInterfaceSubnetMask": "0.0.0.0",
+        "PrimaryInterfaceGateway": "0.0.0.0",
+        "PrimaryInterfaceDnsServer": "0.0.0.0"
       }
     },
-    "wifi-networks": {
-      "lan-settings": {
-        "lan-host-name": {
-          "hostname": "hostname-test"
-        },
-        "primary-interface": {
-          "method": "automatic",
-          "primary-interface-ip": "0.0.0.0",
-          "primary-interface-subnet-mask": "0.0.0.0",
-          "primary-interface-gateway": "0.0.0.0",
-          "primary-interface-dns-server": "0.0.0.0"
-        }
-      },
-      "services": {
-        "share-via-air-play": true,
-        "share-via-google-cast": true
-      },
-      "wireless-network": {
-        "ssid-name": "ssid-barco-test",
-        "wpa-2-password": "test-barco"
-      }
+    "Services": {
+      "ShareViaAirPlay": true,
+      "ShareViaGoogleCast": true
+    },
+    "WirelessNetwork": {
+      "SsidName": "ssid-barco-test",
+      "Wpa2Password": "test-barco"
     }
   }
 }
