Update env.yml Add example and add fields

--- a/env.yml
+++ b/env.yml
@@ -1,5 +1,6 @@
 env: "debug"
 log: "all-in-one"
-api-url: "http://192.168.1.160:4001"
-api-key: ""
-#log: "separated"
+api-url: "https://192.168.1.2:1010"
+api-user: ""
+api-password: ""
+api-token: ""
