Update env.yml Update verbose

--- a/env.yml
+++ b/env.yml
@@ -1,6 +1,19 @@
-env: "debug"
-log: "all-in-one"
-api-url: "https://192.168.1.2:1010"
+# To use the token, you just need to encrypt
+# the user and the password in "user:password"
+# format in base64 - Use token or user and password
+# ---
+# env : debug, test, pre-prod, prod
+# log : all-in-one, separated
+# api-url: Barco CX-20 station api's url
+# api-user: Barco CX-20 station access user's
+# api-password: Barco CX-20 station access password's
+# api-token: Barco CX-20 station access token's
+# ---
+env: ""
+log: ""
+api-url: ""
+# ---
 api-user: ""
 api-password: ""
+# ---
 api-token: ""
